# actor_library

./: CMakeLists.txt
include/: actor.h
src/: actor.cpp
tests/: actor_test.cpp
